# ai-log-analyzer

./: .env.example  .gitignore  README.md  backend.tar  deploy_vm.sh  docker-compose.nas.yaml  docker-compose.yml  frontend.tar  nginx.conf
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/config/: database.py  settings.py
backend/app/data/: linux_troubleshooting.json
backend/app/middlewares/: auth_middleware.py  error_handler.py
backend/app/models/: log_file.py  message.py  session.py  user.py
backend/app/repositories/: log_repository.py  message_repository.py  session_repository.py  user_repository.py
backend/app/routes/: agent_routes.py  anomaly_routes.py  audit_routes.py  auth_routes.py  chat_routes.py  cicd_routes.py  compare_routes.py  error_cluster_routes.py  export_routes.py  knowledge_routes.py  log_routes.py  message_routes.py  obsidian_routes.py  repair_template_routes.py  rule_routes.py  session_routes.py  settings_routes.py  sop_routes.py  template_routes.py  timeline_routes.py  user_routes.py  webhook_routes.py
backend/app/services/: agent_service.py  agent_steps.py  ai_service.py  anomaly_detector.py  anomaly_service.py  audit_service.py  (+27 more)
backend/grafana/: dashboard.json  prometheus.yml
backend/tests/: conftest.py  test_agent_routes.py  test_agent_service.py  test_agent_steps.py  test_auto_title.py  test_error_cluster_service.py  test_log_service.py  test_log_slice.py  test_masking_service.py  test_rate_limiter.py  test_resolved_path.py  test_sop_routes.py  test_sop_service.py
(+162 files in other folders)
